--- a/templates/GlobetrottersGuide/base.html
+++ b/templates/GlobetrottersGuide/base.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 
-
 <html lang="en">
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v3.8.5">
     <link rel="icon" href="{% static 'images/gtg_logo.ico' %}">
     <title>
         Globetrotter's Guide
@@ -25,7 +21,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light p-0 shadow-sm">
                 <a class="navbar-brand p-2" href="{% url 'GlobetrottersGuide:HomePage' %}">
-                    <img src="{% static 'images/gtg_logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <img src="{% static 'images/gtg_logo.ico' %}" width="30" height="30" class="d-inline-block align-top" alt="">
                     Globetrotter's Guide
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,30 +34,30 @@
                         <li class="nav-item "><a class="nav-link" href="{% url 'GlobetrottersGuide:about' %}">About</a></li>
                     </ul>
                         {% if user.is_authenticated %}
-                    <ul class="navbar-nav mr-mid-3">
-                        <li class="nav-item dropdown">
-                        <a class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" role="button">{{ user.username }}</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url 'GlobetrottersGuide:UserProfile' %}">User Profile</a>
-                            <a class="dropdown-item" href="{% url 'GlobetrottersGuide:UserLiked'%}">Likes</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'auth_logout' %}">Log Out</a>
-                        </div>
-                        </li>
-                        <img class="rounded-circle" src="{{MEDIA_URL}}profile_images/casc.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-                    </ul>
-
+                        <a class="navbar-nav mr-mid-3">
+                            <li class="nav-item dropdown ml-auto">
+                                <a class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" role="button">{{ user.username }}</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="{% url 'GlobetrottersGuide:UserProfile' request.user.id  %}">User Profile</a>
+                                    <a class="dropdown-item" href="{% url 'GlobetrottersGuide:UserLiked' request.user.id %}">Likes</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{% url 'auth_logout' %}">Log Out</a>
+                                </div>
+                            </li>
+                        </a>
+                        <a id="userInfo" href="{% url 'GlobetrottersGuide:UserProfile' request.user.id %}">
+                            <img class="rounded-circle" src="{{ user.UserProfile.picture }}" width="30" height="30" class="d-inline-block align-top" alt="">
+                        </a>
                         {% else %}
                         <a class="btn btn-outline-success" href="{% url 'auth_login' %}">Login</a>
                         <a class="btn btn-outline-primary" href="{% url 'registration_register' %}">Sign up</a>
                         {% endif %}
-
                 </div>
             </nav>
         </header>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row" style="margin-top: 100px">
                 <main role="main" class="col-md-9  ml-sm-auto col-lg-10 px-4">
                     {% block body_block %}
 
@@ -71,7 +67,7 @@
 
                 <!-- FOOTER -->
                     <hr>
-                    <footer class="container"><p>&copy; 2020 Globetrotter's Guide </p></footer>
+                    <footer class="container" style="position:fixed;bottom:0"><p>&copy; 2020 Globetrotter's Guide </p></footer>
             </div>
         </div>
 
@@ -80,7 +76,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
-        <script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js"></script>
+        <!--<script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js"></script>-->
     </body>
 </html>
 
