--- a/templates/GlobetrottersGuide/add_countryReview.html
+++ b/templates/GlobetrottersGuide/add_countryReview.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-{% extends 'GlobetrottersGuide/base.html' %}
-{% load staticfiles %}
+{% extends "GlobetrottersGuide/base.html" %}
 
-{% block title_block %}
-    Share Your Experience
+{% block title %}
+
 {% endblock %}
 
 {% block body_block %}
 
+<div class="jumbotron p-4">
+    <div class="container">
+        <h1 class="jumbotron-heading">Share your experience in {{category.name}}</h1>
+    </div>
+</div>
 
+<div class="container">
+    <div class="row">
+        <form role="form" id="page_form" method="post"
+            action="{% url 'GlobetrottersGuide:add_countryReview' continent.slug country.slug %}">
+
+                {% if user.is_authenticated %}
+
+                {% csrf_token %}
+                Bootstrapping GlobetrottersGuide 220
+
+                {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+                {% endfor %}
+
+                {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}<br />
+                {{ field }}<br />
+                <div class="p-2"></div>
+                {% endfor %}
+
+                {% else %}
+
+                {% endif %}
+
+            <br />
+            <button class="btn btn-primary" type="submit" name="submit">
+                Publish
+            </button>
+            <div class="p-5"></div>
+        </form>
+    </div>
+</div>
+
+{% endblock %}
