--- a/templates/GlobetrottersGuide/home.html
+++ b/templates/GlobetrottersGuide/home.html
@@ -1,40 +1,134 @@
 <!DOCTYPE html>
 {% extends 'GlobetrottersGuide/base.html' %}
 {% load staticfiles %}
+{% load gtg_template_tags %}
 
 {%block title_block %}
-<h1 id="pagetitle">Home</h1>
+    <h1>The Earth</h1>
 {% endblock %}
+
+
 
 {% block body_block %}
-    {% if continents %}
-        <div style="overflow: hidden">
-            <ul id="leftlist" style="width: 40%;border: 1px solid lightblue;padding: 20px;float: left;min-height: 300px">
-                {% for continent in continents %}
-                <li id="leftitem" style="list-style: none">
-                    <a href="/{{ continent.slug }}/">{{ continent.name }}<span style="margin-left:50px;float: right">{{ continent.likes }}</span></a>
-                </li>
-                {% endfor %}
+
+    <div class="row">
+        <div class="col">
+            <ul class="list-group" style="margin:178px auto 178px auto;width:60%">
+                {% if continents %}
+                    {% for continent in continents %}
+                    <li class="list-group-item">
+                        <a href="{% url 'GlobetrottersGuide:continent' continent.slug %}">{{ continent.name }}<span style="float:right">Visits: {{ continent.views }}</span>
+                        </a>
+                    </li>
+                    {% endfor %}
+                {% else %}
+                    <li class="list-group-item">There is no continent in database.</li>
+                {% endif %}
             </ul>
-            <div style="width: 50%;float: right">
-                <img src="{% static 'continent/worldmap.png' %}" style="width: 100%;">
-            </div>
         </div>
-        <div>
-            <div>
-                {% for item in reviews %}
-                <div style="width: 25%; float: left;border: 1px solid lightblue;min-height: 200px;padding: 20px">
-                    <h4>{{ item }}</h4>
-                    <p>neirong</p>
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="width:700px;height:700px;">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="{% static 'continent/worldmap-1.png' %}" class="d-block w-100" alt="">
                 </div>
-                {% endfor %}
+                {% if continents %}
+                    {% for continent in continents %}
+                    {% with 'continent/'|add:continent.slug|add:'-0.png' as img %}
+                        <div class="carousel-item">
+                          <img src="{% static img %}" class="d-block w-100" alt="">
+                        </div>
+                    {% endwith %}
+                    {% endfor %}
+                {% endif %}
+            </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+        </div>
+
+    </div>
+
+    <div class="row" style="width:100%;">
+    <h1>Latest Country Reviews</h1>
+    </div>
+    {% if country_reviews or city_reviews %}
+    {% for review in country_reviews %}
+        <div class="card" style="width: 18rem;margin:10px;float:left;">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <h5>{{ review.belong_country.name }}</h5>
+                </li>
+            </ul>
+            {% if review.image %}
+            <img src="{{ review.image.url }}" class="card-img-top" alt="No Image">
+            {% endif %}
+            <div class="card-body">
+                <h5 class="card-title">{{ review.title }}</h5>
+                <p class="card-text">{{ review.text }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    User:
+                    <a href="{% url 'GlobetrottersGuide:UserProfile' review.user.username %}">{{ review.user.username }}</a>
+                    &emsp; Rating: {{ review.rating }}/5
+                </li>
+                <li class="list-group-item">{{ review.likes }} likes &emsp; {{ review.views }} views</li>
+                <li class="list-group-item">{{ review.publish_date | date:"F d Y" }} &emsp; Spent: {{ review.timeSpent.days }} day(s)</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">View Detail</a>
             </div>
         </div>
+    {% endfor %}
     {% else %}
-    <strong>There are no continents in the list.</strong>
+    <p style="float:left;margin:10px"><h2>No one has reviewed any country yet.</h2></p>
     {% endif %}
+
+
+    <div class="row" style="width:100%;">
+    <h1>Latest City Reviews</h1>
+    </div>
+    {% if city_reviews %}
+        {% for review in city_reviews %}
+        <div class="card" style="width: 18rem;margin:10px;float:left;">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <h5>{{ review.belong_city.name }}</h5>
+                </li>
+            </ul>
+            {% if review.image %}
+            <img src="{{ review.image.url }}" class="card-img-top" alt="No Image">
+            {% endif %}
+            <div class="card-body">
+                <h5 class="card-title">{{ review.title }}</h5>
+                <p class="card-text">{{ review.text }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    User:
+                    <a href="{% url 'GlobetrottersGuide:UserProfile' review.user.username %}">{{ review.user.username }}</a>
+                    &emsp; Rating: {{ review.rating }}/5
+                </li>
+                <li class="list-group-item">{{ review.likes }} likes &emsp; {{ review.views }} views &emsp; </li>
+                <li class="list-group-item">{{ review.publish_date | date:"F d Y" }} &emsp; Spent: {{ review.timeSpent.days }} day(s)</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">View Detail</a>
+            </div>
+        </div>
+    {% endfor %}
+    {% else %}
+        <p style="float:left;margin:10px"><h2>No one has reviewed any city yet.</h2></p>
+    {% endif %}
+
+
+
 {% endblock %}
 
-{% block img_block %}
-       <img id="geomap" src="{% static 'continent/worldmap.png' %}" />
-{% endblock %}
+
