--- a/templates/GlobetrottersGuide/home_city.html
+++ b/templates/GlobetrottersGuide/home_city.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
+{% extends 'GlobetrottersGuide/base.html'%}
 {% load staticfiles %}
+{% load gtg_template_tags %}
 
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="{% static 'city_style.css' %}" />
-    </head>
-    <body>
-        <div>
-            <a href="/home/">
-                <img id="logo" src="{% static 'images/gtg_logo.ico' %}"width="150" height="150"/>
-                <h1 id="title">Globetrotter's Guide</h1>
-            </a>
-            {% block title_block %}
-            {% endblock %}
+
+{% block title_block%}
+    <div class="row">
+        <div class="col">
+        <h1>{{ city.name }}</h1>
         </div>
+        <div class="col">
+            <a role="button" class="btn btn-primary" href="" style="float:right">Write a Review</a>
+        </div>
+    </div>
+{% endblock %}
 
-        {% if user.is_authenticated %}
-            <p id="welcomeuser">Welcome, {{ user.username }}</p>
-        {% endif %}
+{% block body_block %}
 
-        {% with 'flags/'|add:country_slug|add:'.png' as img %}
-            <img id="flag" src="{% static img %}" />
-        {% endwith %}
+    {% if reviews %}
+    {% for review in reviews %}
+        <div class="card" style="width: 18rem;margin:10px;float:left;">
+            {% if review.image %}
+            <img src="{{ review.image.url }}" class="card-img-top" alt="No Image">
+            {% endif %}
+            <div class="card-body">
+                <h5 class="card-title">{{ review.title }}</h5>
+                <p class="card-text">{{ review.text }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    User:
+                    <a href="{% url 'GlobetrottersGuide:UserProfile' review.user.username %}">{{ review.user.username }}</a>
+                    &emsp; Rating: {{ review.rating }}/5
+                </li>
+                <li class="list-group-item">{{ review.likes }} likes &emsp; {{ review.views }} views</li>
+                <li class="list-group-item">{{ review.publish_date | date:"F d Y" }} &emsp; Spent: {{ review.timeSpent.days }} day(s)</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">View Detail</a>
+            </div>
+        </div>
+    {% endfor %}
+    {% else %}
+        <p><h2>No one has reviewed this city yet.</h2></p>
+    {% endif %}
 
-        <p id="listtitle">{{ city_name }} has {{ review_num }} reviews.</p>
+{% endblock %}
 
-        {% if reviews %}
-        <ul id="reviewslist">
-            {% for review in reviews %}
-            <li id="review">
-                <p style="font-size:90%; color: blue;">{{review.likes}} likes &emsp; {{review.user}} was there for {{review.timeSpent.days}} years  &emsp; {{ review.publish_date | date:"F d Y" }} &emsp; {{review.rating}}  <img src="{% static 'images/star.png' %}"width="3%" height="3%"/> </p>
-                <p>{{review.text}}</p>
-            </li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-    </body>
-</html>
