--- a/templates/GlobetrottersGuide/home_country.html
+++ b/templates/GlobetrottersGuide/home_country.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'GlobetrottersGuide/base.html' %}
+{% load staticfiles %}
+{% load gtg_template_tags %}
 
-</body>
-</html>
+{%block title_block %}
+    <div class="row">
+        <div class="col">
+        <h1>{{ country.name }}
+            {% with 'flags/'|add:country.slug|add:'.png' as img %}
+            <img class="rounded-circle" src="{% static img %}" style="width:50px;height:50px;" alt=""/>
+            {% endwith %}
+        </h1>
+        </div>
+        <div class="col">
+            <a role="button" class="btn btn-primary" href="" style="float:right">Write a Review</a>
+        </div>
+    </div>
+{% endblock %}
+
+{% block body_block %}
+
+    <ul class="list-group" style="margin:10px;width:18rem;float:left;">
+        {% if cities %}
+            {% for city in cities %}
+            <li class="list-group-item">
+                <a href="{% url 'GlobetrottersGuide:city' continent.slug country.slug city.slug %}">{{ city.name }}<span style="float:right">Visits: {{ city.views }}</span>
+                </a>
+            </li>
+            {% endfor %}
+        {% else %}
+            <li class="list-group-item">There is no city in database.</li>
+        {% endif %}
+    </ul>
+
+    {% if reviews %}
+    {% for review in reviews %}
+        <div class="card" style="width: 18rem;margin:10px;float:left;">
+            {% if review.image %}
+            <img src="{{ review.image.url }}" class="card-img-top" alt="No Image">
+            {% endif %}
+            <div class="card-body">
+                <h5 class="card-title">{{ review.title }}</h5>
+                <p class="card-text">{{ review.text }}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    User:
+                    <a href="{% url 'GlobetrottersGuide:UserProfile' review.user.username %}">{{ review.user.username }}</a>
+                    &emsp; Rating: {{ review.rating }}/5
+                </li>
+                <li class="list-group-item">{{ review.likes }} likes &emsp; {{ review.views }} views</li>
+                <li class="list-group-item">{{ review.publish_date | date:"F d Y" }} &emsp; Spent: {{ review.timeSpent.days }} day(s)</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">View Detail</a>
+            </div>
+        </div>
+    {% endfor %}
+    {% else %}
+        <p style="float:left;margin:10px"><h2>No one has reviewed this country yet.</h2></p>
+    {% endif %}
+
+
+{% endblock %}
+
+
