--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,22 +2,24 @@
 {% extends 'GlobetrottersGuide/base.html' %}
 
 {% block title_block %}
-    Login
+
 {% endblock %}
 
 {% block body_block %}
 
 <div class="container">
-    <form class="form-signin" role="form" method="post" action=".">
+    <form class="form-signin" role="form" method="post" action="." style="margin-top:100px">
         {% csrf_token %}
         <label for="inputUsername" class="sr-only">Username</label>
-        <input type="text" name="username" id="id_username" class="form-control"
-        placeholder="Username" required autofocus>
+
+        <input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus style="width: 30%; margin:auto;">
+
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="password" id="id_password" class="form-control"
-        placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit"
-        value="Submit">Sign in</button>
+
+        <input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required style="width: 30%; margin: 50px auto auto;">
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" style="margin: 50px auto auto; width:auto">Sign in</button>
+
     </form>
 </div>
 
