--- a/templates/GlobetrottersGuide/createProfile.html
+++ b/templates/GlobetrottersGuide/createProfile.html
@@ -1,7 +1,7 @@
 {% extends 'GlobetrottersGuide/base.html' %}
 
 {% block title_block %}
-<h1>Edit Profile</h1>
+<h1>Create Profile</h1>
 {% endblock %}
 
 
