--- a/templates/GlobetrottersGuide/home_continent.html
+++ b/templates/GlobetrottersGuide/home_continent.html
@@ -50,12 +50,9 @@
                     <a href="{% url 'GlobetrottersGuide:UserProfile' review.user.username %}">{{ review.user.username }}</a>
                     &emsp; Rating: {{ review.rating }}/5
                 </li>
-                <li class="list-group-item">{{ review.likes }} likes &emsp; {{ review.views }} views</li>
+                <li class="list-group-item">{{ review.views }} views</li>
                 <li class="list-group-item">{{ review.publish_date | date:"F d Y" }} &emsp; Spent: {{ review.timeSpent.days }} day(s)</li>
             </ul>
-            <div class="card-body">
-                <a href="#" class="card-link">View Detail</a>
-            </div>
         </div>
     {% endfor %}
         {% for review in city_reviews %}
@@ -78,12 +75,9 @@
                     <a href="{% url 'GlobetrottersGuide:UserProfile' review.user.username %}">{{ review.user.username }}</a>
                     &emsp; Rating: {{ review.rating }}/5
                 </li>
-                <li class="list-group-item">{{ review.likes }} likes &emsp; {{ review.views }} views &emsp; </li>
+                <li class="list-group-item">{{ review.views }} views &emsp; </li>
                 <li class="list-group-item">{{ review.publish_date | date:"F d Y" }} &emsp; Spent: {{ review.timeSpent.days }} day(s)</li>
             </ul>
-            <div class="card-body">
-                <a href="#" class="card-link">View Detail</a>
-            </div>
         </div>
     {% endfor %}
     {% else %}
