Slightly changed about page

--- a/templates/GlobetrottersGuide/about.html
+++ b/templates/GlobetrottersGuide/about.html
@@ -9,7 +9,8 @@
 
 {% block body_block %}
 
-    <p><h1>{{ organization }}</h1></p>
-    <p><h3>{{ authors }}</h3></p>
+    <p><h1>{{ authors }}</h1></p>
+    <p><h3>Hello! Thank you so much for visiting the page.</h3></p>
+    <p><h3>This was a website made by 2nd year students in Glasgow University for the Web App Development Course.</h3></p>
 
 {% endblock %}
